--- a/mission/syle.css
+++ b/mission/syle.css
@@ -57,3 +57,13 @@ body{
     line-height: 1.5;
     
 }
+
+
+
+.dark{
+    background-color: #333;
+    color: white;
+}
+.dark h2{
+    color: blue;
+}
