--- a/bookReview/blog.css
+++ b/bookReview/blog.css
@@ -1,7 +1,6 @@
-*{
-    /* border: 1px solid; */
-
-}
+/* *{
+    border: 1px solid;
+} */
 h1{
     text-align: center;
 }
@@ -10,6 +9,12 @@ h1{
     border-top: 1px solid;
     border-bottom: 1px solid;
     border-color: #EFC69B;
+}
+.Links a{
+    color: #AF1B3F;
+    padding: .3em;
+    font-size: 15px;
+    text-decoration: none;
 }
 .Links ul{
     padding: .5em;
@@ -23,24 +28,60 @@ h1{
     justify-items: end;
 
 }
-.Links a{
-    color: #AF1B3F;
-    padding: .3em;
-    font-size: 15px;
-    text-decoration: none;
-}
 body{
-    
     font-family: Helvetica, Arial, sans-serif;
     color: #473144;
     font-size: 12px;
+
 }
-.books{
-    margin-top: 1em;
+img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+.articles{
     display: grid;
-    grid-template-columns: 1fr 2fr 1fr;    
+    grid-template-columns: 4fr 1fr;
+    /* grid-template-columns: 1fr 2fr 1fr; */
 }
-.book_title{
-    font-size: 18px;
+.filters{
+    grid-column: 2/3;
+    grid-row: 1/3;
+    padding: 1em;
+    margin: 1em;
+    border: 1px solid #EFC69B;
+}
+.articles article{
+    grid-column: 1/2;
+    
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+}  
+
+.post-details{
+    grid-column: 1/2;
+    color: #473144;
+    text-align: right;
+    padding: 1em;
+    border-right: 1px solid #EFC69B;
+}
+.post-content p a{
     color: #AF1B3F;
+}
+.post-content{
+    grid-column: 2/3;
+    padding: 1em;
+}
+.post-content h2 a{
+    color: #AF1B3F;
+    text-decoration: none;
+    
+}
+.post-content p{
+    color: #473144;
+}
+.post-details__date{
+    font-size: 13px;
+    font-weight: bold;
 }
