--- a/bookReview/blog.css
+++ b/bookReview/blog.css
@@ -4,6 +4,9 @@
 h1{
     text-align: center;
 }
+.title{
+    font-family: Lora, Impact, serif;
+}
 .Links{
     width: 100%;
     border-top: 1px solid;
