--- a/bookReview/blog.css
+++ b/bookReview/blog.css
@@ -1,6 +1,6 @@
 /* *{
     border: 1px solid;
-} */
+}  */
 h1{
     text-align: center;
 }
@@ -41,7 +41,8 @@ img{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
+    min-width: 100px;
+    max-width: 150px;
 }
 .articles{
     display: grid;
