--- a/bookReview/blog.css
+++ b/bookReview/blog.css
@@ -49,13 +49,7 @@ img{
     grid-template-columns: 4fr 1fr;
     /* grid-template-columns: 1fr 2fr 1fr; */
 }
-.filters{
-    grid-column: 2/3;
-    grid-row: 1/3;
-    padding: 1em;
-    margin: 1em;
-    border: 1px solid #EFC69B;
-}
+
 .articles article{
     grid-column: 1/2;
     
@@ -88,4 +82,18 @@ img{
 .post-details__date{
     font-size: 13px;
     font-weight: bold;
+}
+.filters{
+    grid-column: 2/3;
+    grid-row: 1/3;
+    padding: 1em;
+    margin: 1em;
+    border: 1px solid #EFC69B;
+    font-size: 15px;
+    grid-template-columns: 1fr 3fr;
+}
+input{
+    font-size: 19px;
+    padding: .2em;
+    max-width: 50%;
 }
