--- a/personalWebsiteProject/adlib.css
+++ b/personalWebsiteProject/adlib.css
@@ -1,5 +1,102 @@
+*{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+header{
+    text-align: center;
+    margin-bottom: 2em;
+}
+header p{
+    text-decoration: underline;
+}
 .inputInsert{
     color: red;
     font-weight: bold;
+    font-style: italic;
     text-align: justify;
+}
+
+#wordsLocation{
+    text-align: center;
+    /* display: block;
+    margin-right:auto;
+    margin-left: auto; */
+}
+#wordsLocation input{
+    text-align: center;
+
+}
+#wordsLists{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-left: auto;
+    margin-right: auto;
+    width: 500px;
+}
+#first{
+    grid-column: 1/2;
+}
+#second{
+    grid-column: 2/3;
+    
+}
+
+#wordsLocation p{
+    font-size: 14px;
+}
+#errors{
+    color: darkred;
+}
+#name{
+    font-weight: bold;
+}
+#adlibLocation{
+    padding-top: .5em;
+    padding-bottom: .5em;
+    padding-left: 1.5em;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    background-color: lightblue;
+    border-radius: 1em;
+    border: 1px solid rgba(34, 34, 238, .4);
+}
+#Finished{
+    transition-duration: 0.4s;
+    display: block;
+    margin: auto;
+    margin-top: 3em;
+    font-size: 12px;
+    color: white;
+    border: 1px solid rgba(34, 34, 238, .4);
+    background-color: rgb(255, 100, 49);
+
+}
+#Finished:hover{
+    background-color: rgb(255, 150, 115);
+    color: brown;
+}
+#Reset{
+    transition-duration: 0.4s;
+    display: block;
+    margin: auto;
+    margin-top: 3em;
+    font-size: 12px;
+    color: white;
+    border: 1px solid rgba(34, 34, 238, .4);
+    background-color: rgb(22, 5, 0);
+
+}
+#Reset:hover{
+    background-color: rgb(255, 42, 42);
+    color: rgb(0, 0, 0);
+}
+
+
+
+
+#resource{
+    font-size: 12px;
+    font-weight: lighter;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
