--- a/about_me/aboutMe/aboutme.css
+++ b/about_me/aboutMe/aboutme.css
@@ -1,6 +1,9 @@
-p{
-    color: floralwhite;
-    background-color: salmon;
+h1{
+    text-align: center;
+    border-bottom: 1px salmon solid;
+    width: 20ch;
+    margin-left: auto;
+    margin-right: auto;
 }
 head{
     color: darkblue;
@@ -9,6 +12,30 @@ body{
     background-color: lightblue;
 }
 img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+
     max-width: 80ch;
     height: auto;
+    border-radius: 1em;
+}
+p{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    color: floralwhite;
+    background-color: salmon;
+    padding: 1em;
+    max-width: 100ch;
+    border-radius: 1em;
+
+}
+#ender{
+    text-align: center;
+}
+#foods{
+    width: 20ch;
+    margin-left: auto;
+    margin-right: auto;
 }
