--- a/personalWebsiteProject/adlib.css
+++ b/personalWebsiteProject/adlib.css
@@ -62,7 +62,7 @@ p{
     margin: auto;
     margin-top: 1em;
     margin-bottom: 1em;
-    background-color: lightblue;
+    background-color: #add8e6;
     border-radius: 1em;
     border: 1px solid rgba(34, 34, 238, .4);
     max-width: 77ch;
