--- a/index.css
+++ b/index.css
@@ -55,18 +55,17 @@ li{
 }
 a{
     box-sizing: border-box;
-    margin: 0em;
-    padding: 0em;
     width: 100%;
     height: 100%;
     list-style: none;
     background-color: lightcyan;
     text-align: center;
-    padding: .0em;
-    margin: .0em;
+    padding: 0em;
+    margin: 0em;
     margin-bottom: 1.3em;
     border: solid darkcyan;
     border-radius: 1em;
+    transition-duration: .8s;
 }
 #buttons{
     font-size: 15px;
@@ -77,10 +76,17 @@ a{
     width: 100%;
     height: 100%;
     border-radius: 1em;
-    
+    transition-duration: .5s;
 }
 #buttons:hover{
     background-color:tomato;
+    transition-duration: .8s;
+    text-shadow: 1px 1px 1px rgba(36, 61, 62, 0.335);
+    border-radius: .3em;
+}
+a:hover{
+    transition-duration: .8s;
+    border-radius: .3em;
 }
 
 
